--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="col-lg-6 wow fadeInLeft">
                 <div class="title">
                     <h6 class="third-color mb-3">Reflexión y motivación en Neurogenesis</h6>
-                    <h2 class="mb-4">COMIENZA LA NUEVA ERA DIGITAL</h2>
+                    <h4 class="mb-4">Comienza la nueva era digital</h4>
                     <p>Investigamos y desarrollamos modelos de Inteligencia Artificial basados en Deep Learning, cuya innovación aporte algoritmos interpretables que posibiliten la regulación y legislación de los modelos de Inteligencia Artificial en sectores donde, por cuestiones de interpretabilidad, se requiera de una justificación en la decisión que arroja el modelo de Red Neuronal. Para este acometido hacemos uso de la tecnología creada y patentada por la empresa, llamada: DL | OTL, de sus siglas en ingles (DEEP LEARNING | ON THE LIGHT). Esta tecnología posibilita la interpretación del DEEP LEARNING, eliminando el blackbox. Nuestra innovación es la creación de algoritmos que tienen como objetivo cubrir el mayor número de aplicaciones posibles en sectores como: La Seguridad, el Bienestar Social o la protección y recuperación medioambiental.</p>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                 <!--Blog Content-->
                 <div class="blog-text">
                     <h6 class="third-color mb-3">January 14, 2019</h6>
-                    <h2>Living Your Dreams</h2>
+                    <h4>Living Your Dreams</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
                 </div>
             </div>
@@ -268,7 +268,7 @@
                 <!--Blog Content-->
                 <div class="blog-text">
                     <h6 class="third-color mb-3">August 20, 2019</h6>
-                    <h2>Design Your Website</h2>
+                    <h4>Design Your Website</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                 <!--Blog Content-->
                 <div class="blog-text">
                     <h6 class="third-color mb-3">January 14, 2019</h6>
-                    <h2>Living Your Dreams</h2>
+                    <h4>Living Your Dreams</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                 <!--Blog Content-->
                 <div class="blog-text">
                     <h6 class="third-color mb-3">August 20, 2019</h6>
-                    <h2>Design Your Website</h2>
+                    <h4>Design Your Website</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
                 </div>
             </div>
@@ -320,7 +320,7 @@
 <!--Otl Start-->
 <section id="otl" class="bg-light">
     <div class="container">
-      <div class="row align-items-center mb-5">
+        <div class="row align-items-center mb-5">
             <div class="col-md-6 order-md-2 wow fadeInRight">
                 <!--Otl Content-->
                 <div class="blog-text">
@@ -339,11 +339,14 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow fadeInLeft">
-                    <img src="images/ia/blog-image1.jpg" alt="image">
+                    <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                        <source src="videos/video-1.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
-      </div>
-     <div class="row align-items-center mb-5">
+        </div>
+
+        <div class="row align-items-center mb-5">
             <div class="col-md-6 wow fadeInLeft">
                 <!--Blog Content-->
                 <div class="blog-text">
@@ -356,11 +359,14 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right wow fadeInRight">
-                    <img src="images/ia/blog-image1.jpg" alt="image">
+                    <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                        <source src="videos/video-2.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
-      </div>
-      <div class="row align-items-center mb-5">
+        </div>
+
+        <div class="row align-items-center mb-5">
             <div class="col-md-6 order-md-2 wow fadeInRight">
                 <!--Otl Content-->
                 <div class="blog-text">
@@ -374,11 +380,14 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow fadeInLeft">
-                    <img src="images/ia/blog-image1.jpg" alt="image">
+                     <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                        <source src="videos/video-3.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
-      </div>
-     <div class="row align-items-center">
+        </div>
+
+        <div class="row align-items-center">
             <div class="col-md-6 wow fadeInLeft">
                 <!--Blog Content-->
                 <div class="blog-text">
@@ -395,11 +404,12 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right wow fadeInRight">
-                    <img src="images/ia/blog-image1.jpg" alt="image">
+                    <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                        <source src="videos/video-4.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
-      </div>
-
+        </div>
     </div>
 </section>
 <!--Otl end-->
@@ -691,16 +701,17 @@
             <div class="col-md-6 order-md-2 wow fadeInRight">
                 <!--Blog Content-->
                 <div class="blog-text">
-                    <h6 class="third-color mb-3">January 14, 2019</h6>
-                    <h2>Living Your Publicaciones</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                    <a href="blog-right.html" class="btn btn-large btn-gradient btn-rounded mt-4">Leer mas</a>
+                    <h6 class="third-color mb-3">Febrero 09, 2022</h6>
+                    <h4>La apuesta de Europa por la digitalización empieza a dar fruto</h4>
+                    <br>
+                    <p>La inteligencia artificial se ha considerado como una  herramienta muy útil para la humanidad desde su invención. Esta tiene la capacidad de ayudar a impulsar grandes descubrimientos científicos que, en definitiva, contribuirán al desarrollo de la sociedad en un futuro. De hecho, se llevan a cabo importantes avances en esta materia día a día, permitiendo la creación de sistemas cada vez más innovadores.</p>
+                    <a target="__blank" href="https://monarquia.elconfidencialdigital.com/articulo/an/apuesta-digitalizacion-mano-europa-empieza-dar-fruto-empresa-espana-patenta-avances-mas-relevantes-carrera-inteligencia-artificial/20220209190413073788.html" class="btn btn-large btn-gradient btn-rounded mt-4">Ver mas</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow hover-effect fadeInLeft">
-                    <img src="images/publication/blog-image1.jpg" alt="image">
+                    <img src="images/publication/noticia-1.jpg" alt="image">
                 </div>
             </div>
         </div>
@@ -709,33 +720,36 @@
             <div class="col-md-6 wow fadeInLeft">
                 <!--Blog Content-->
                 <div class="blog-text">
-                    <h6 class="third-color mb-3">August 20, 2019</h6>
-                    <h2>Design Your Website</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                    <a href="blog-left.html" class="btn btn-large btn-gradient btn-rounded mt-4">Leer mas</a>
+                    <h6 class="third-color mb-3">Noviembre 11, 2021</h6>
+                    <h4>Neurogenesis en la Cumbre de Inteligencia Artificial 2021</h4>
+                    <br>
+                    <p>Neurogenesis IA Technologies participa en la jornada multisectorial de Inteligencia Artificial. El evento ha sido organizado por Murcia Diario, Élite Murcia y Televisión Murciana en colaboración con la asociación Murcia Inteligencia Artificial (MIA), con un rotundo éxito tanto en la asistencia presencial como en el seguimiento vía streaming a través de los canales de los medios de comunicación del Grupo Zambudio.</p>
+                    <a target="__blank" href="https://youtu.be/t7Hi1wnq7wk" class="btn btn-large btn-gradient btn-rounded mt-4">Ver mas</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right hover-effect wow fadeInRight">
-                     <img src="images/publication/blog-image1.jpg" alt="image">
+                     <img src="images/publication/noticia-2.jpg" alt="image">
                 </div>
             </div>
         </div>
+
         <div class="row align-items-center mb-5">
             <div class="col-md-6 order-md-2 wow fadeInRight">
                 <!--Blog Content-->
                 <div class="blog-text">
-                    <h6 class="third-color mb-3">January 14, 2019</h6>
-                    <h2>Living Your Publicaciones</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                    <a href="blog-right.html" class="btn btn-large btn-gradient btn-rounded mt-4">Leer mas</a>
+                    <h6 class="third-color mb-3">Noviembre 5, 2021</h6>
+                    <h4>La inteligencia artificial que evitará la muerte de millones de peces tropicales</h4>
+                    <br>
+                    <p>El director técnico de la compañía especializada en Inteligencia Artificial (Neurogenesis IA Technologies), Ingeniero Civil en Informática y Máster en Inteligencia Artificial, Álvaro Maldonado, expone el problema que AcuaMattic solucionará de principio a fin y la repercusión internacional que tiene en la biodiversidad del planeta. Se trata de una de las varias vías de investigación y desarrollo que el equipo está trabajando en su departamento técnico.</p>
+                    <a target="__blank" href="https://autonomico.elconfidencialdigital.com/articulo/an/biodiversidad-acuatica-comienza-regeneracion/20211105193239072661.html" class="btn btn-large btn-gradient btn-rounded mt-4">Ver mas</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow hover-effect fadeInLeft">
-                     <img src="images/publication/blog-image1.jpg" alt="image">
+                     <img src="images/publication/noticia-3.jpg" alt="image">
                 </div>
             </div>
         </div>
@@ -744,51 +758,55 @@
             <div class="col-md-6 wow fadeInLeft">
                 <!--Blog Content-->
                 <div class="blog-text">
-                    <h6 class="third-color mb-3">August 20, 2019</h6>
-                    <h2>Design Your Website</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                    <a href="blog-left.html" class="btn btn-large btn-gradient btn-rounded mt-4">Leer mas</a>
+                    <h6 class="third-color mb-3">Octubre 6, 2021</h6>
+                    <h4>¿Qué temer de la nueva era digital?</h4>
+                    <br>
+                    <p>La sociedad debe prepararse para un futuro de cambios solo comparables a los que el ser humano experimentó en el dominio del fuego.</p>
+                    <a target="__blank" href="https://actualidad-abc.com/que-temer-de-la-nueva-era-digital/" class="btn btn-large btn-gradient btn-rounded mt-4">Ver mas</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right hover-effect wow fadeInRight">
-                     <img src="images/publication/blog-image1.jpg" alt="image">
+                     <img src="images/publication/noticia-4.jpg" alt="image">
                 </div>
             </div>
         </div>
+
         <div class="row align-items-center mb-5">
             <div class="col-md-6 order-md-2 wow fadeInRight">
                 <!--Blog Content-->
                 <div class="blog-text">
-                    <h6 class="third-color mb-3">January 14, 2019</h6>
-                    <h2>Living Your Publicaciones</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                    <a href="blog-right.html" class="btn btn-large btn-gradient btn-rounded mt-4">Leer mas</a>
+                    <h6 class="third-color mb-3">Septiembre 8, 2021</h6>
+                    <h4>Neurogenesis se constituye como una de las empresas referentes en IA</h4>
+                    <br>
+                    <p>El futuro del mercado es perfilado por la creación de nuevas compañías. La electrónica avanza y Neurogenesis IA Technologies SL representa una de las apuestas recientes. Se trata de una empresa especializada en la investigación, desarrollo e innovación de inteligencia artificial (IA). La versatilidad formativa de sus integrantes atrae la atención de los inversores comprometidos en el campo.</p>
+                    <a target="__blank" href="https://americaeconomica.com/noticia/empresas/neurogenesis-se-constituye-desde-el-30-de-julio-del-2021-como-una-de-las-empresas-referentes-en-inteligencia-artificial.html" class="btn btn-large btn-gradient btn-rounded mt-4">Ver mas</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow hover-effect fadeInLeft">
-                     <img src="images/publication/blog-image1.jpg" alt="image">
+                     <img src="images/publication/noticia-5.jpg" alt="image">
                 </div>
             </div>
         </div>
 
-        <div class="row align-items-center mb-5">
+        <div class="row align-items-center">
             <div class="col-md-6 wow fadeInLeft">
                 <!--Blog Content-->
                 <div class="blog-text">
-                    <h6 class="third-color mb-3">August 20, 2019</h6>
-                    <h2>Design Your Website</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                    <a href="blog-left.html" class="btn btn-large btn-gradient btn-rounded mt-4">Leer mas</a>
+                    <h6 class="third-color mb-3">Septiembre 7, 2021</h6>
+                    <h4>Neurogenesis IA Technologies se inscribe con grandes posibilidades de éxito</h4>
+                    <br>
+                    <p>Tras años de estudio e investigación se materializan proyectos y, para el correcto desarrollo de estos, Neurogenesis es la primera empresa dedicada a la búsqueda de talentos encargados de investigar y desarrollar algoritmos innovadores con el objetivo de mejorar el bienestar social.</p>
+                    <a target="__blank" href="https://www.elboletin.com/en-la-carrera-en-inteligencia-artificial-neurogenesis-ia-technologies-se-inscribe-con-grandes-posibilidades-de-exito/" class="btn btn-large btn-gradient btn-rounded mt-4">Ver mas</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right hover-effect wow fadeInRight">
-                     <img src="images/publication/blog-image1.jpg" alt="image">
+                     <img src="images/publication/noticia-6.jpg" alt="image">
                 </div>
             </div>
         </div>
@@ -807,7 +825,7 @@
                     <div class="bg-overlay gradient-bg1 opacity-8"></div>
                     <div class="address-text text-center text-white position-relative wow fadeInUp">
                         <!--title-->
-                        <h2 class="mb-4">Dirección y contacto</h2>
+                        <h2 class="mb-4">Dirección y Contacto</h2>
                         <!--Address-->
                         <p class="adress mb-3 text-white">Rambla Catalunya 119, 08008 Barcelona, España. </p>
                         <!--Phone-->
