--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
+	<meta name="description" content="p.1 is a responsive onepage agency template">
+	<meta name="keywords"
+		content="onepage, one page, parallax, craetive, corporate, agency, minimal, revolution, modern, business, digital-agency">
+	<meta name="author" >
     <!-- Page Title -->
     <title>Neurogenesis IA Technologies</title>
     <!-- Favicon -->
