se agrega css responsive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/cubeportfolio.min.css">
     <!-- Fancy Box -->
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    	<!-- responsive css -->
+	<link href="css/responsive.css" rel="stylesheet">
     <!-- REVOLUTION STYLE SHEETS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css">
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/navigation.css">
