se agregan atributos para ver los videos en Iphone

--- a/index.html
+++ b/index.html
@@ -344,7 +344,17 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow fadeInLeft">
-                    <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                    <video 
+                    class="video-player"
+                    height="100%"
+                    width="100%"
+                    controls="controls"
+                    controls preload="auto"
+                    autoplay="autoplay"
+                    loop
+                    muted 
+                    playsinline
+                    style="object-fit:cover;">
                         <source src="videos/video-1.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -364,7 +374,17 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right wow fadeInRight">
-                    <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                    <video 
+                    class="video-player"
+                    height="100%"
+                    width="100%"
+                    controls="controls"
+                    controls preload="auto"
+                    autoplay="autoplay"
+                    loop
+                    muted 
+                    playsinline
+                    style="object-fit:cover;">
                         <source src="videos/video-2.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -385,7 +405,17 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image wow fadeInLeft">
-                     <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                    <video 
+                    class="video-player"
+                    height="100%"
+                    width="100%"
+                    controls="controls"
+                    controls preload="auto"
+                    autoplay="autoplay"
+                    loop
+                    muted 
+                    playsinline
+                    style="object-fit:cover;">
                         <source src="videos/video-3.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -409,7 +439,17 @@
             <div class="col-md-6">
                 <!--Blog Image-->
                 <div class="blog-image text-right wow fadeInRight">
-                    <video autoplay muted height="100%" loop width="100%" style="object-fit:cover;">
+                    <video 
+                    class="video-player"
+                    height="100%"
+                    width="100%"
+                    controls="controls"
+                    controls preload="auto"
+                    autoplay="autoplay"
+                    loop
+                    muted 
+                    playsinline
+                    style="object-fit:cover;">
                         <source src="videos/video-4.mp4" type="video/mp4">
                     </video>
                 </div>
