Eliminado error de estilos

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- REVOLUTION STYLE SHEETS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css">
+     <link rel="stylesheet" type="text/css" href="rs-plugin/css/navigation.css">
     <!-- Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
